--- a/前端模块化总结（一）.md
+++ b/前端模块化总结（一）.md
@@ -161,25 +161,25 @@ exports = function(x) {
 `require`命令用于加载模块，模块后缀名默认为`.js`。
 
 根据参数格式的不同，`require`命令会去不同的路径去寻找模块。
-1. 绝对路径，如`require('/home/marco/foo')`，表示加载的是一个位于绝对路径的模块文件
-<br>
-2. 相对路径，如`require('./foo')`表示加载一个位于相对路径（与当前模块位置相比）的模块文件。举例来说，模块`grain/index`内执行`require('./foo')`，Node会依次搜索以下文件：
-    - /grain/foo.js | foo.json | foo.node
-    - /grain/foo/package.json文件中main字段指定的文件
-    - /grain/foo/index.js | index.json | index.node
-<br>
-3. 参数字符串不包含`./`或`/`，参数字符串为模块名，则表示加载的是一个默认提供的核心模块（位于操作系统Node的安装目录中），或者是一个位于各级node_module目录中已经安装的模块（全局安装或局部安装）。举例来说，模块`home/user/grain/foo.js`内执行了`require('bar.js')`命令，Node会依次搜索以下文件：
-    - /usr/local/bin/node/bar.js
-    - /home/user/grain/node_modules/foo.js
-    - /home/user/node_modules/bar.js
-    - /node_modules/bar.js
-<br>
-3. 参数字符串不以`./`或`/`开头，但是仍是一个路径，比如`require('demo/path/to/file')`，则Node会先找到`demo`的位置，然后再以它为参数找到后续路径。
-<br>
-5. 不指定模块文件后缀名，Node会尝试依次按照为模块添加`.js`
-、`.json`、`.node`寻找
-<br>
-6. 使用`require.resolve()`方法可以得到`requrie`命令加载的模块的确切文件名
+  1. 绝对路径，如`require('/home/marco/foo')`，表示加载的是一个位于绝对路径的模块文件
+
+  2. 相对路径，如`require('./foo')`表示加载一个位于相对路径（与当前模块位置相比）的模块文件。举例来说，模块`grain/index`内执行`require('./foo')`，Node会依次搜索以下文件：
+      - /grain/foo.js | foo.json | foo.node
+      - /grain/foo/package.json文件中main字段指定的文件
+      - /grain/foo/index.js | index.json | index.node
+
+  3. 参数字符串不包含`./`或`/`，参数字符串为模块名，则表示加载的是一个默认提供的核心模块（位于操作系统Node的安装目录中），或者是一个位于各级node_module目录中已经安装的模块（全局安装或局部安装）。举例来说，模块`home/user/grain/foo.js`内执行了`require('bar.js')`命令，Node会依次搜索以下文件：
+      - /usr/local/bin/node/bar.js
+      - /home/user/grain/node_modules/foo.js
+      - /home/user/node_modules/bar.js
+      - /node_modules/bar.js
+
+  3. 参数字符串不以`./`或`/`开头，但是仍是一个路径，比如`require('demo/path/to/file')`，则Node会先找到`demo`的位置，然后再以它为参数找到后续路径。
+
+  5. 不指定模块文件后缀名，Node会尝试依次按照为模块添加`.js`
+  、`.json`、`.node`寻找
+
+  6. 使用`require.resolve()`方法可以得到`requrie`命令加载的模块的确切文件名
 
 #### 3. 目录的加载规则
 通常我们把相关的模块放在同一个目录下，这时可以为目录设置一个入口文件以便`require`方法可以通过这个入口文件加载整个目录。方法是在目录中放一个`package.json`文件，将入口文件写入`main`字段：
@@ -298,13 +298,14 @@ ES 6模块自动采用严格模式，因此有以下限制：
 ___
 ## ES Module和CommonJS模块
 1. CommonJS模块输出的是一个值的拷贝，ES 6模块输出的是值的引用
-CommonJS模块输出的是`module.exports`这个对象，我们读取的也是这个对象，而不是模块内部某个变量。也就是说，一旦输出一个值，模块内部的变化就影响不到这个值（引用类型除外）。而对于ES 6模块，由于在JavaScript引擎对脚本做静态分析的时候，遇到模块加载`import`命令，就会生成一个只读引用。等到脚本真正执行时，再根据这个只读引用，到被加载的那个模块里面去取值。
+CommonJS模块输出的是`module.exports`这个对象，我们读取的也是这个对象，而不是模块内部某个变量。
+也就是说，一旦输出一个值，模块内部的变化就影响不到这个值（引用类型除外）。而对于ES 6模块，由于在JavaScript引擎对脚本做静态分析的时候，遇到模块加载`import`命令就会生成一个只读引用，等到脚本真正执行时，再根据这个只读引用，到被加载的那个模块里面去取值。
 
 2. CommonJS模块是**运行时**加载，ES 6模块是**编译时**输出接口
 这是因为CommonJS的加载的是一个对象（即module.exports属性），该对象只有在脚本运行完才会生成。而ES 6模块不是对象，它的对外接口只是一种静态定义，在代码静态解析阶段生成，使得编译时就能确定模块的依赖关系(“静态优化”)。
 
 ___
 #### 参考
-1.[理解JS模块化](https://xieyufei.com/2017/02/19/JS-Standard.html)
-2.[前端模块化详解](https://juejin.im/post/5c17ad756fb9a049ff4e0a62#heading-49)
-3.[深入理解ES 6模块机制](https://zhuanlan.zhihu.com/p/33843378?utm_medium=hao.caibaojian.com&utm_source=hao.caibaojian.com)
+1. [理解JS模块化](https://xieyufei.com/2017/02/19/JS-Standard.html)
+2. [前端模块化详解](https://juejin.im/post/5c17ad756fb9a049ff4e0a62#heading-49)
+3. [深入理解ES 6模块机制](https://zhuanlan.zhihu.com/p/33843378?utm_medium=hao.caibaojian.com&utm_source=hao.caibaojian.com)
