--- a/浏览器-1.架构概述.md
+++ b/浏览器-1.架构概述.md
@@ -53,6 +53,5 @@ Chrome与Node.js都使用了V8引擎，关于V8引擎的具体工作原理后面
 ___
 #### 参考
 1. [浏览器的工作原理：新式网络浏览器幕后](https://www.html5rocks.com/zh/tutorials/internals/howbrowserswork/)
-2. [图解浏览器的基本工作原理
-](https://zhuanlan.zhihu.com/p/47407398)
+2. [图解浏览器的基本工作原理](https://zhuanlan.zhihu.com/p/47407398)
 3. [浏览器进程？线程？傻傻分不清](https://imweb.io/topic/58e3bfa845e5c13468f567d5)
