--- a/图片懒加载.md
+++ b/图片懒加载.md
@@ -125,7 +125,7 @@ imgs.forEach(img => observer.observe(img))
 
 `IntersectionObserver`是异步的，不随着目标元素的滚动同步触发。
 
-`IntersectionObserver`的实现，应该采用requestIdleCallback()，即只有线程空闲下来，才会执行观察器。这意味着，这个观察器的优先级非常低，只在其他任务执行完，浏览器有了空闲才会执行。
+`IntersectionObserver`的实现，应该采用`requestIdleCallback()`（具体参考Event Loop），即只有主线程空闲下来，才会执行观察器。这意味着，这个观察器的优先级非常低。
 
 #### 浏览器支持情况
 ![IntersectionObserver浏览器支持情况](https://pic.downk.cc/item/5ece0196c2a9a83be55692c1.jpg)
