--- a/函数防抖和节流.md
+++ b/函数防抖和节流.md
@@ -1,4 +1,4 @@
-#### 函数防抖
+### 函数防抖
 在事件被触发delay时间间隔之后再执行回调方法，如果在这delay时间内事件再次触发，则重新计时等待delay时间间隔后回调方法的执行。
 
 ```js
@@ -28,7 +28,7 @@ input.onkeypress = debounce(function(){
 
 一般用于处理事件的回调，事件会频繁触发，对于连续触发的两次回调函数，前一次回调得到的执行的条件是它距离后一次回调被触发的时间间隔足够久（大于delay）。
 
-#### 函数节流
+### 函数节流
 规定在指定时间内，只能有一个函数回调得到执行。
 
 ```js
@@ -91,8 +91,7 @@ function throttle (fn, delay, immediate) {
 }
 ```
 
-#### 总结
-1. 区别
+### 区别
 - 防抖强调从**回调函数的角度**，某个回调需要距离下一次回调被触发的时间间隔足够久，才能得到执行；
 - 节流强调从**指定时间间隔的角度**，回调函数在指定时间间隔内最多执行一次。
 
@@ -100,7 +99,7 @@ function throttle (fn, delay, immediate) {
 - 防抖函数只有最后一次会执行；
 - 节流函数每隔delay时间内最多执行一次，如果事件触发频率足够大，可以看作节流函数接近于每delay时间间隔执行一次。
 
-2. 使用场景
+### 使用场景
 - 防抖：根据用户输入内容变化动态展示联想搜索词 / 数据提交按钮的点击事件
 - 节流：滚动事件
 
