--- a/ES 6/变量赋值.md
+++ b/ES 6/变量赋值.md
@@ -1,6 +1,6 @@
 ## 变量的解析赋值
 
-#### 解构
+### 解构
 
 ES6中可以这样赋值：
 
@@ -25,13 +25,13 @@ ES6中可以这样赋值：
     a//1
     b//2
     c//[6,7]
-#### '='右边为不可遍历的情况
+### '='右边为不可遍历的情况
 
     let [x,y] = 1
     let [x,y] = {}
     都会报错
 
-#### 默认值
+### 默认值
 
     let [x,y=2] = [1]
     x//1
