--- a/Vue源码/1.2-入口文件.md
+++ b/Vue源码/1.2-入口文件.md
@@ -10,7 +10,7 @@ new Vue({
 ```
 Vue.js是通过Runtime+Compiler构建出来的，它的入口是 `src/platforms/web/entry-runtime-with-compiler.js`。
 
-#### src/platforms/web/entry-runtime-with-compiler.js
+### src/platforms/web/entry-runtime-with-compiler.js
 ```js
 import config from 'core/config'
 import { warn, cached } from 'core/util/index'
@@ -112,7 +112,7 @@ Vue.compile = compileToFunctions
 export default Vue
 ```
 
-#### src/platforms/web/runtime/index.js
+### src/platforms/web/runtime/index.js
 ```js
 import Vue from 'core/index'
 import config from 'core/config'
@@ -190,7 +190,7 @@ export default Vue
 ```
 在引入`Vue`模块之后，对`Vue`对象做了一些拓展
 
-#### src/core/index.js
+### src/core/index.js
 ```js
 import Vue from './instance/index'
 import { initGlobalAPI } from './global-api/index'
@@ -222,7 +222,7 @@ export default Vue
 可以看到，在这里对Vue原型的`$isServer`、`$ssrContext`属性做了配置，用
 `initGlobalAPI`对`Vue`做了全局API的初始化，在进入`src/core/instance/init.js`之前，先来看一看`initGlobalAPI`做了哪些事情。
 
-#### src/core/global-api/index.js
+### src/core/global-api/index.js
 ```ts
 import config from '../config'
 import { initUse } from './use'
@@ -294,7 +294,7 @@ export function initGlobalAPI (Vue: GlobalAPI) {
 ```
 在Vue.js的初始化过程中，通过`Mixin(Vue)`为`Vue`原型拓展了很多方法，`initGlobalAPI`还会给`Vue`这个对象本身拓展全局的静态方法。
 
-#### src/core/instance/init.js
+### src/core/instance/init.js
 最后，终于在`src/core/instance/init.js`下终于找到了Vue的定义，`Vue`本质上是一个用`Function`实现的类：
 ```js
 import { initMixin } from './init'
