--- a/Vue源码/2.1-数据驱动-Vue实例mount.md
+++ b/Vue源码/2.1-数据驱动-Vue实例mount.md
@@ -101,7 +101,7 @@ export function initMixin (Vue: Class<Component>) {
 
 在对`Vue`实例的初始化工作完成之后，判断`$options.el`属性存在则使用`vm.$mount`方法挂载`Vue`实例，从而做到将模板+数据渲染成为最终的`DOM`。
 
-#### $mount的实现
+### $mount的实现
 Vue.js中`$mount`方法的定义出现在三个模块中：`src/platform/web/entry-runtime-with-compiler.js`、`src/platform/web/runtime/index.js`、`src/platform/weex/runtime/index.js`，这是因为对`$mount`的定义是与平台、构建方式相关的。
 
 在对`$mount`分析之前，先了解一下Vue.js基于源码构建的两个版本：
@@ -228,5 +228,5 @@ export function mountComponent (
 - 初始化实例时执行回调函数？
 - 监测到vm实例中数据发生变化，执行回调函数？
 
-#### 总结
+### 总结
 `$mount`方法的执行依靠`mountComponent`，而`mountComponent`通过实例化一个`Watcher`，在其监听数据变化的回调中通过执行`vm._update(vm._render(), hydrating)`——`vm._render`将实例转换为虚拟vnode，而`vm._update`将虚拟vnode渲染更新为真正的DOM，从而完成整个渲染工作。
