--- a/Vue源码/2.2-数据驱动-Vue实例render.md
+++ b/Vue源码/2.2-数据驱动-Vue实例render.md
@@ -67,7 +67,7 @@ Vue.prototype._render = function (): VNode {
 
 可以看到，在主线上，生成虚拟vnode的`_render`方法是通过执行`vm.$options.render.call(vm._renderProxy, vm.$createElement)`实现的，这里又有两个重要的方法——`vm.$options.render`和`vm.$createElement`。
 
-#### vm.$options.render
+### vm.$options.render
 我们平时开发中手写`render`的场景较少，更多的是使用`template`模板，在3.0小节已经分析过，带`compiler`的Vue.js会在`$mount`执行前将`template`编译成`render`方法。
 
 Vue.js的官方文档中介绍了`render`函数的第一个参数是`createElement`，
@@ -94,7 +94,7 @@ render: function(createElement) {
 
 与`vnode = vm.$options.render(vm._renderProxy, vm.createElement)`做一下比较，可以发现`render`方法中的`createElement`方法正是`vm.$createElement`方法。
 
-#### vm.$createElement
+### vm.$createElement
 实例的`$createElement`方法是在`_init(vm)`阶段执行`vm.$mount(vm.$oprions.el)`方法之前通过`initRender(vm)`定义在实例上的：
 
 ```js
@@ -112,7 +112,7 @@ export function initRender (vm: Component) {
 
 可以看到，在`$createElement`方法之外，`initRender`中还定义了一个`vm._c`方法，这个是在模板被编译成`render`函数时所使用，而`$createElement`是开发手写`render`方法时使用的（？？怎么看出来的），这两个方法支持的参数相同，且都是通过`createElement`实现的。
 
-#### 总结
+### 总结
 本节分析了`vm._render`方法，在这里我们要记住一个主线，`_render`方法是用于生成虚拟节点vnode的，这个方法是在`renderMixin(Vue)`时挂载到Vue原型上的，它通过
 ```js
 vnode = vm.$optoins.render.call(vm._renderProxy, vm.$createElement)
