--- a/Vue源码/2.4-数据驱动-createElement.md
+++ b/Vue源码/2.4-数据驱动-createElement.md
@@ -121,7 +121,7 @@ export function _createElement (
 - `children`的规范化
 - `VNode`的创建
 
-#### children规范化
+### children规范化
 由于`Virtual DOM`实际上是一个树状结构，每一个`VNode`实例可能会有若干个子节点，这些子节点也应该是`VNode`类型，而`_createElement`方法接收的参数`children`是任意类型的（发生在手写`render`时），因此需要将它规范成`VNode`类型。
 
 ```js
@@ -221,7 +221,7 @@ function normalizeArrayChildren (children: any, nestedIndex?: string): Array<VNo
 
 经过以上规范化，`children`变成了类型为`VNode`的一维数组。
 
-#### VNode的创建
+### VNode的创建
 回到`_createElement`方法主流程中，在对`children`做规范化处理之后，接下来的工作是创建`VNode`实例。
 
 ```js
@@ -257,7 +257,7 @@ if (typeof tag === 'string') {
 
 其中，通过`createComponent`创建组件类型`VNode`的过程将在后面组件源码中分析。
 
-#### 总结
+### 总结
 至此，本节大致分析了
 ```js
 vm._c = (a, b, c, d) => createElement(vm, a, b, c, d, false)
