--- a/浏览器工作原理/浏览器-4.工作流程总结.md
+++ b/浏览器工作原理/浏览器-4.工作流程总结.md
@@ -1,4 +1,4 @@
-#### 浏览器进程中的各线程
+### 浏览器进程中的各线程
 
 - UI线程
 - 网络线程
@@ -6,7 +6,7 @@
 - 渲染线程
 
 ___
-#### 渲染进程中的各线程
+### 渲染进程中的各线程
 
 一种说法？
 - 主线程 main thread
@@ -21,4 +21,4 @@ ___
 - 定时器线程
 - 异步网络请求线程
 ___
-####
+###
