--- a/零碎.md
+++ b/零碎.md
@@ -1,4 +1,4 @@
-#### 1. 严格模式下('use strict')进行JavaScript开发有什么好处？
+### 1. 严格模式下('use strict')进行JavaScript开发有什么好处？
 
 - 消除JavaScript语法的一些不合理、不严谨之处，减少怪异行为；
 - 消除代码运行的不安全之处，保证代码运行的安全；
@@ -26,7 +26,7 @@ console.info(eval("var x = 5;"))
 console.info(x) // 2
 ```
 
-#### 2. 关于eval
+### 2. 关于eval
 `eval`只有在**直接调用**并且调用函数就是`eval`本身时，才会在当前作用域中执行。
 ```js
 var foo = 1
@@ -57,7 +57,7 @@ console.log(foo) // 3
 ```
 应该避免使用`eval`函数，99.9%的使用`eval`的场景都有不使用`eval`的解决方案。
 
-#### 3. 手动实现继承
+### 3. 手动实现继承
 
 许多OO语言都支持两种继承方式：**接口继承和实现继承**,接口继承继承方法签名，实现继承继承实际的方法。
 在ECMAScript中，由于函数没有签名，无法实现接口继承，只支持实现继承。实现继承主要依靠原型链实现。
@@ -77,25 +77,25 @@ var grandChild = new Child()
 ```
 这样，grandchild继承了构造函数Parent的原型方法。
 
-#### 4. 正则去除字符串的首尾空格
+### 4. 正则去除字符串的首尾空格
 ```js
 var str = " dai you kongge de zi fuchuan !  "
 var reg = /^\s*|\s*$/g
 str.replace(reg, '')
 ```
 
-#### 5. CSS的link和@import的区别
+### 5. CSS的link和@import的区别
 
 1. `@import`是CSS提供的语法规则，css2.1提出的，老版本浏览器不支持；`link`是HTML提供的语法，除了加载CSS外还可以定义RSS、rel等，不存在兼容性问题。
 2. **加载**时机不同，`link`引入的css在页面加载时也会被加载，而`@import`引入的css将会等到页面加载完之后再加载；
 
-#### 6. box-sizing
+### 6. box-sizing
 用于控制元素的盒模型的解析模式，默认为`content-box`。
 
 - `content-box`：让元素维持W3C的标准盒模型，元素的宽度/高度由border + padding + content的宽度/高度决定，设置width/height属性指的是content部分的宽/高
 - border-box：让元素维持IE传统盒模型，设置width/height属性指的是border + padding + content
 
-#### 7. 清除浮动
+### 7. 清除浮动
 - 为什么要清除浮动？
 
   当一个内层元素是浮动的时候，如果没有关闭浮动时，其父元素也就不会再包含这个浮动的内层元素，因为此时浮动元素已经脱离了文档流，导致外层不会被撑开。
@@ -119,7 +119,7 @@ str.replace(reg, '')
   }
   ```
 
-#### 8. 垂直居中
+### 8. 垂直居中
 1. 宽高固定
   ```css
   .parent{
@@ -157,7 +157,7 @@ str.replace(reg, '')
   ```
 4. table-cell
 
-#### 9. 左右固定，中间自适应
+### 9. 左右固定，中间自适应
 - 双飞翼布局: `float` `-marginLeft`
 - 圣杯布局
 
