--- a/Vue源码/2.0-数据驱动-Runtime Only版本和Compiler+Runtime版本.md
+++ b/Vue源码/2.0-数据驱动-Runtime Only版本和Compiler+Runtime版本.md
@@ -4,7 +4,7 @@ Vue.js基于源码构建的两个版本：
 
 从Vue.js的角度出发，这里的编译器所做的工作可以理解为将`template`模板编译转化为可执行的JS脚本。
 
-#### Runtime only
+### Runtime only
 该版本只包含运行时版本涵盖了创建`Vue`实例、渲染并处理`Virtual Dom`等功能。`Runtime only`有两种使用场景：
 - 在`options`中手写`render`函数去定义渲染过程
   ```js
@@ -19,7 +19,7 @@ Vue.js基于源码构建的两个版本：
 
   编译过程对性能会造成一定的损耗，并且由于加入了编译的流程代码，Vue代码的总体积也更加庞大(运行时版本相比完整版体积要小大约 30%)。因此在实际开发中，我们将对`Vue`模板的编译工作放到`webpack`的构建流程（**离线编译**）中去做，这样不仅减小了生产环境代码的体积，也提高了运行时的性能。
 
-#### Runtime + compiler
+### Runtime + compiler
 该版本下，可以通过指定`template`创建`Vue`实例：
 
 ```js
@@ -148,7 +148,7 @@ Vue.compile = compileToFunctions
 export default Vue
 ```
 
-#### 总结
+### 总结
 总之，无论是使用单文件`.vue`方式开发组件，还是写了`el`或者`template`属性，最终都会转换成`render`方法，所有组件的渲染最终都需要`render`方法，这是`Vue`的一个**编译**的过程。
 
 带`compiler`版本的Vue.js通过`compileToFunctions`方法实现在线编译。而`Runtime only`版本的Vue.js不做在线编译，手动提供`render`创建`Vue`实例时则不需要编译工作，未提供则借助类似`vue-loader`工具在构建阶段完成离线编译工作。
