docs: runtime only 和 compiler+runtime vue

--- a/Vue源码/2.0-数据驱动-Runtime Only版本和Compiler+Runtime版本.md
+++ b/Vue源码/2.0-数据驱动-Runtime Only版本和Compiler+Runtime版本.md
@@ -1,8 +1,8 @@
 Vue.js基于源码构建的两个版本：
-- runtime only 只包含运行时的版本
-- runtime + compiler 同时包含编译器和运行时的版本
+- runtime only：只包含运行时的版本
+- runtime + compiler：同时包含编译器和运行时的版本
 
-从Vue.js的角度出发，这里的编译器所做的工作可以理解为将`template`模板编译转化为可执行的JS脚本。
+从Vue.js的角度出发，这里的编译器所做的工作可以理解为将`template`模板编译转化为可执行的JavaScript脚本。
 
 ### Runtime only
 该版本只包含运行时版本涵盖了创建`Vue`实例、渲染并处理`Virtual Dom`等功能。`Runtime only`有两种使用场景：
@@ -27,130 +27,44 @@ Vue.js基于源码构建的两个版本：
 new Vue({
   template: '<div>{{ title }}</div>'
 })
+// or
+new Vue({
+  el: '#app'
+})
 ```
 
 `src/platform/web/entry-runtime-with-compiler.js`中定义了把模板编译成`render`的工作：
 
 ```js
-/**
-* src/platform/web/entry-runtime-with-compiler.js
-*/
-import config from 'core/config'
-import { warn, cached } from 'core/util/index'
-import { mark, measure } from 'core/util/perf'
-
 import Vue from './runtime/index'
-import { query } from './util/index'
 import { compileToFunctions } from './compiler/index'
-import { shouldDecodeNewlines, shouldDecodeNewlinesForHref } from './util/compat'
-
-const idToTemplate = cached(id => {
-  const el = query(id)
-  return el && el.innerHTML
-})
 
 // 带compiler版本的Vue.js重写$mount方法，需要缓存在src/platform/weex/runtime/index.js中定义的$mount方法
 const mount = Vue.prototype.$mount
 
 // 为包含编译器和不包含编译器的版本提供不同的封装，最终调用的是上面缓存过的原型上的$mount方法
-Vue.prototype.$mount = function (
-  el?: string | Element,
-  hydrating?: boolean
-): Component {
+Vue.prototype.$mount = function (el, hydrating) {
   el = el && query(el)
-
-  // 限制Vue实例不能挂载到根元素上
-  if (el === document.body || el === document.documentElement) {
-    process.env.NODE_ENV !== 'production' && warn(
-      `Do not mount Vue to <html> or <body> - mount to normal elements instead.`
-    )
-    return this
-  }
-
   const options = this.$options
 
-  // 需要编译 or 不需要编译
-
+  // 如果实例$options上未提供render方法，则需要将template或者el转换为render方法，这个过程就是模板编译
   if (!options.render) {
-    // 如果实例$options上无render方法，则将template或者el转换为render方法，这个过程就是编译
+    let template = options.template || el.outerHTML
 
-    let template = options.template
-
-    // template的值可以是标识id标识的字符串，也可以是节点对象
-    if (template) {
-      if (typeof template === 'string') {
-        if (template.charAt(0) === '#') {
-          template = idToTemplate(template)
-          if (process.env.NODE_ENV !== 'production' && !template) {
-            warn(
-              `Template element not found or is empty: ${options.template}`,
-              this
-            )
-          }
-        }
-      } else if (template.nodeType) {
-        // template 的类型是元素节点，则使用该元素的innerHTML作为template
-        template = template.innerHTML
-      } else {
-        if (process.env.NODE_ENV !== 'production') {
-          warn('invalid template option:' + template, this)
-        }
-        return this
-      }
-    } else if (el) {
-      // 没有传入template，则使用el元素的outerHTML作为template
-      template = getOuterHTML(el)
-    }
-
-    // template存储着最终用来生成render渲染函数的字符串
-
-    if (template) {
-      if (process.env.NODE_ENV !== 'production' && config.performance && mark) {
-        mark('compile')
-      }
-
-      // 使用编译器对template模板进行在线编译
-      const { render, staticRenderFns } = compileToFunctions(template, {
-        outputSourceRange: process.env.NODE_ENV !== 'production',
-        shouldDecodeNewlines,
-        shouldDecodeNewlinesForHref,
-        delimiters: options.delimiters,
-        comments: options.comments
-      }, this)
-      options.render = render
-      options.staticRenderFns = staticRenderFns
-
-      if (process.env.NODE_ENV !== 'production' && config.performance && mark) {
-        mark('compile end')
-        measure(`vue ${this._name} compile`, 'compile', 'compile end')
-      }
-    }
+    // compileToFunctions生成render方法
+    const { render, staticRenderFns } = compileToFunctions(template)
+    options.render = render
+    options.staticRenderFns = staticRenderFns
   }
   return mount.call(this, el, hydrating)
 }
 
-/**
- * 获取元素的outerHTML
- */
-function getOuterHTML (el: Element): string {
-  if (el.outerHTML) {
-    return el.outerHTML
-  } else {
-    // IE9-11 中 SVG 标签元素没有 innerHTML 和 outerHTML 这两个属性
-    const container = document.createElement('div')
-    container.appendChild(el.cloneNode(true))
-    return container.innerHTML
-  }
-}
-
 Vue.compile = compileToFunctions
-
-export default Vue
 ```
 
 ### 总结
+`Runtime only`版本的Vue.js不做在线编译，创建`Vue`实例时需要开发者手动提供`render`，或者借助类似`vue-loader`工具在构建阶段完成离线编译工作。
+
+而带`compiler`版本的Vue.js重写了原型上的`$mount`方法，在调用原型的`$mount`之前检查`render`是否存在，不存在则生成这个`render`方法，具体的`compileToFunctions`的过程会在后面编译部分具体分析。
+
 总之，无论是使用单文件`.vue`方式开发组件，还是写了`el`或者`template`属性，最终都会转换成`render`方法，所有组件的渲染最终都需要`render`方法，这是`Vue`的一个**编译**的过程。
-
-带`compiler`版本的Vue.js通过`compileToFunctions`方法实现在线编译。而`Runtime only`版本的Vue.js不做在线编译，手动提供`render`创建`Vue`实例时则不需要编译工作，未提供则借助类似`vue-loader`工具在构建阶段完成离线编译工作。
-
-本节简单分析了带`compiler`版本的Vue.js在`rc/platform/web/entry-runtime-with-compiler.js`中做了什么工作——重写了原型上的`$mount`方法，在调用原型的`$mount`之前检查`vm.$options.render`是否存在，不存在则需要编译工作，具体的`compileToFunctions`的过程会在后面编译部分具体分析。
