--- a/Vue源码/1.1-Vue源码结构.md
+++ b/Vue源码/1.1-Vue源码结构.md
@@ -38,9 +38,8 @@ shared目录下有两个文件：
 - constant.js：定义了生命周期钩子函数、全局方法两个常量数组
 - utils.js：定义了一些公用的如变量类型判断、类型转换等方法
 
-
-![Vue.js源码](https://ustbhuangyi.github.io/vue-analysis/assets/mind.png)
+![Vue.js源码](https://pic.downk.cc/item/5f512091160a154a674d3c58.png)
 
 ___
 ### 参考
- [Vue.js技术揭秘](https://ustbhuangyi.github.io/vue-analysis/v2/prepare/directory.html)
+[Vue.js技术揭秘](https://ustbhuangyi.github.io/vue-analysis/v2/prepare/directory.html)
