dos:前端模块化

--- a/前端开发/前端模块化总结(一).md
+++ b/前端开发/前端模块化总结(一).md
@@ -1,9 +1,9 @@
-## 什么是模块化
+### 什么是模块化
 1. 将一个复杂的程序依据一定的规则、规范封装成几个文件，并进行组合
 2. 模块的内部的数据与实现是私有的，对外暴露一些方法及属性与其他模块通信
 
-## 模块化的发展进化进程
-### 1. 函数封装
+### 模块化的发展进化进程
+#### 1. 函数封装
 将不同的功能封装成不同的全局函数，
 ```js
 function foo () {}
@@ -11,7 +11,7 @@ function bar () {}
 ```
 不足： 污染全局命名空间，容易引起命名冲突
 
-### 2. 命名空间
+#### 2. 命名空间
 简单对象封装：
 ```js
 const Module = {
@@ -27,7 +27,7 @@ Module.data  = 'other data'
 ```
 从外部修改了模块内数据
 
-### 3. IIFE匿名函数自调用
+#### 3. IIFE匿名函数自调用
 ```js
 (function (window) {
   let data = 'data in module'
@@ -56,7 +56,7 @@ Module.foo() // 不受影响，仍然输出 'foo: data in module'
 
 如果当前模块依赖其他模块，如何解决？
 
-### 4. IIFE增强——引入依赖
+#### 4. IIFE增强——引入依赖
 ```js
 (function (window, $) {
   let data = 'data in module'
@@ -79,13 +79,13 @@ Module.foo()
 
 当前模块依赖jQuery库，因此需要将jQuery作为参数传入，这样**保证了模块之间的独立性，模块间的依赖关系也表现地比较明显**，这就是模块模式，也是现代模块实现的基石。
 
-## 模块化的好处
+### 模块化的好处
 - 避免命名冲突、减少命名空间污染
 - 按需加载
 - 复用性、维护性
 - ...
 
-## 模块化规范
+### 模块化规范
 传统的通过`<script>`引入模块的方式，存在两个问题：一是每个JavaScript模块对应一个资源请求，当引入多个模块时会导致请求过多；二是模块间的依赖关系，导致严格的`<script>`的先后顺序，且依赖关系模块。
 
 针对上面的问题，各种前端模块化规范也应用而生了，下面对各个规范作介绍。
@@ -95,7 +95,7 @@ Module.foo()
 - ES Module
 
 ---
-## CommonJS
+### CommonJS
 Nodejs环境所使用的模块系统就是基于CommonJs规范实现的，我们现在所说的CommonJs规范也大多是指Node的模块系统。
 
 CommonJS规范规定，每个模块内部，`module`变量代表当前模块。这个变量是一个对象，它的`exports`属性（即`module.exports`）是对外的接口。加载某个模块，其实是加载该模块的`module.exports`属性。
@@ -122,7 +122,7 @@ Node内部提供一个Module构造函数，所有模块都是Module的实例。
 - `module.exports`
 表示模块对外输出的值
 
-### 1. 模块导出
+#### 1. 模块导出
 `module.exports`表示当前模块对外暴露的接口，其他模块加载当前模块实际上就是读取`module.exports`变量。为了方便，Node为每个模块提供一个`exports`变量，指向`module.exports`，这等同于在每个模块的头部有一行这样的命令：
 
 ```js
@@ -157,11 +157,11 @@ exports = function(x) {
 }
 ```
 
-### 2. 模块导入
+#### 2. 模块导入
 `require`命令用于加载模块，模块后缀名默认为`.js`。
 
 根据参数格式的不同，`require`命令会去不同的路径去寻找模块。
-  1. 绝对路径，如`require('/home/marco/foo')`，表示加载的是一个位于绝对路径的模块文件
+  1. 绝对路径，如`require('/home/grain/foo')`，表示加载的是一个位于绝对路径的模块文件
 
   2. 相对路径，如`require('./foo')`表示加载一个位于相对路径（与当前模块位置相比）的模块文件。举例来说，模块`grain/index`内执行`require('./foo')`，Node会依次搜索以下文件：
       - /grain/foo.js | foo.json | foo.node
@@ -181,7 +181,7 @@ exports = function(x) {
 
   6. 使用`require.resolve()`方法可以得到`requrie`命令加载的模块的确切文件名
 
-### 3. 目录的加载规则
+#### 3. 目录的加载规则
 通常我们把相关的模块放在同一个目录下，这时可以为目录设置一个入口文件以便`require`方法可以通过这个入口文件加载整个目录。方法是在目录中放一个`package.json`文件，将入口文件写入`main`字段：
 
 ```json
@@ -193,7 +193,7 @@ exports = function(x) {
 
 `require`方法解析到参数字符串指向一个目录后，会自动查看目录中的`package.json`文件记载`main`字段指定的入口文件，如果没有`main`字段或者没有`package.json`文件，则会加载目录下的`index.js`、`index.json`、`index.node`。
 
-### 4. 模块的缓存
+#### 4. 模块的缓存
 第一次加载模块时，Node会缓存模块。之后再次加载，直接从缓存中读取该模块的`module.exports`属性。
 
 ```js
@@ -207,10 +207,10 @@ require('./demo.js').message
 
 需要注意的是，缓存是根据缓存路径识别模块的，如果同样的文件名保存在不同的路径上，`require`命令还是会重新加载模块的。
 
-### 5. 模块的循环加载
+#### 5. 模块的循环加载
 
 ___
-## AMD 和 CMD
+### AMD 和 CMD
 由于Node.js主要用于服务器编程，模块文件一般都已经存在于本地硬盘，加载较快，不用考虑非同步加载的方式，所以对Node.js来讲CommonJS规范比较适用。但对于浏览器环境，要从服务器端加载模块，就必须采用异步模式。
 
 伴随着`ES Module`的出现，AMD和CMD逐渐被淘汰，下面仅对曾经流行的AMD和CMD做简单介绍。
@@ -266,7 +266,7 @@ define(function(require, exports, module) {
 CMD推崇就近依赖，延迟执行。
 
 ___
-## ES 6模块
+### ES 6模块
 ES 6在语言标准的层面上，实现了模块功能，**旨在成为浏览器和服务器通用的模块解决方案**。
 
 ES 6模块功能主要由两个命令构成：`export`和`import`。`export`命令用于规定模块的对外接口，`import`命令用于输入其他模块提供的功能。
@@ -294,15 +294,6 @@ ES 6模块自动采用严格模式，因此有以下限制：
 3. 不能对只读属性赋值
 4. 不能使用`this`指向全局对象，顶层`this`指向`undefined`
 5. 不能使用`arguments.callee`、`arguments.caller`
-
-___
-## ES Module和CommonJS模块
-1. CommonJS模块输出的是一个值的拷贝，ES 6模块输出的是值的引用
-CommonJS模块输出的是`module.exports`这个对象，我们读取的也是这个对象，而不是模块内部某个变量。
-也就是说，一旦输出一个值，模块内部的变化就影响不到这个值（引用类型除外）。而对于ES 6模块，由于在JavaScript引擎对脚本做静态分析的时候，遇到模块加载`import`命令就会生成一个只读引用，等到脚本真正执行时，再根据这个只读引用，到被加载的那个模块里面去取值。
-
-2. CommonJS模块是**运行时**加载，ES 6模块是**编译时**输出接口
-这是因为CommonJS的加载的是一个对象（即module.exports属性），该对象只有在脚本运行完才会生成。而ES 6模块不是对象，它的对外接口只是一种静态定义，在代码静态解析阶段生成，使得编译时就能确定模块的依赖关系(“静态优化”)。
 
 ___
 ### 参考
