--- a/Vue源码/2.0-数据驱动-Runtime Only版本和Compiler+Runtime版本.md
+++ b/Vue源码/2.0-数据驱动-Runtime Only版本和Compiler+Runtime版本.md
@@ -6,7 +6,7 @@ Vue.js基于源码构建的两个版本：
 
 ### Runtime only
 该版本只包含运行时版本涵盖了创建`Vue`实例、渲染并处理`Virtual Dom`等功能。`Runtime only`有两种使用场景：
-- 在`options`中手写`render`函数去定义渲染过程
+1. 在`options`中手写`render`函数去定义渲染过程：
   ```js
   // 不需要编译器
   new Vue({
@@ -15,7 +15,7 @@ Vue.js基于源码构建的两个版本：
     }
   })
   ```
-- 利用`webpack`进行`Vue`的工程化开发时借助`vue-loader`这样的编译工具对`.vue`文件进行离线编译，尽管我们也可以利用`template`模板标签去书写代码，但是**此时的Vue已经不需要利用编译器去负责模板的编译工作**了，这个过程交给了`vue-loader`去实现。
+2. 利用`webpack`进行`Vue`的工程化开发时借助`vue-loader`这样的编译工具对`.vue`文件进行离线编译，尽管我们也可以利用`template`模板标签去书写代码，但是**此时的Vue已经不需要利用编译器去负责模板的编译工作**了，这个过程交给了`vue-loader`去实现。
 
   编译过程对性能会造成一定的损耗，并且由于加入了编译的流程代码，Vue代码的总体积也更加庞大(运行时版本相比完整版体积要小大约 30%)。因此在实际开发中，我们将对`Vue`模板的编译工作放到`webpack`的构建流程（**离线编译**）中去做，这样不仅减小了生产环境代码的体积，也提高了运行时的性能。
 
@@ -33,12 +33,8 @@ new Vue({
 })
 ```
 
-`src/platform/web/entry-runtime-with-compiler.js`中定义了把模板编译成`render`的工作：
-
+`src/platform/web/entry-runtime-with-compiler.js`中增加了把模板编译成`render`的操作：
 ```js
-import Vue from './runtime/index'
-import { compileToFunctions } from './compiler/index'
-
 // 带compiler版本的Vue.js重写$mount方法，需要缓存在src/platform/weex/runtime/index.js中定义的$mount方法
 const mount = Vue.prototype.$mount
 
@@ -61,6 +57,8 @@ Vue.prototype.$mount = function (el, hydrating) {
 
 Vue.compile = compileToFunctions
 ```
+
+可以看到，这里对`$mount`进行了改写，做了`render`处理，最终调用的是缓存过的原型上的`$mount`方法。
 
 ### 总结
 `Runtime only`版本的Vue.js不做在线编译，创建`Vue`实例时需要开发者手动提供`render`，或者借助类似`vue-loader`工具在构建阶段完成离线编译工作。
