--- a/Vue源码/2.2-数据驱动-vnode和render方法.md
+++ b/Vue源码/2.2-数据驱动-vnode和render方法.md
@@ -1,87 +1,142 @@
-Vue.js通过`createElement`方法创建`VNode`类实例，这个方法定义在`src/core/vdom/create-element`中：
+上一节讲到`_render`方法用于将实例转换为`vnode`对象，`_update`将生成的`vnode`渲染成真实的DOM。本文分析`vnode`的生成。
+
+首先，要先搞明白`vnode`是什么。
+
+### vnode是什么
+由于浏览器标准把真实DOM设计得非常复杂，频繁地更新DOM会产生性能问题，`virtual DOM`也就有了舞台——虚拟DOM是用于描述DOM节点的原生JavaScript对象。
+
+在Vue.js中，`virtual DOM`是用`vnode`描述的：
 ```js
-export function createElement (
-  context: Component,
-  tag: any,
-  data: any,
-  children: any,
-  normalizationType: any,
-  alwaysNormalize: boolean
-): VNode | Array<VNode> {
-  // alwaysNormalize 在template编译出render函数时为false，手写render方法时为true
+// src/core/vdom/vnode.js
+class VNode {
+  constructor (tag, data, children, text, elm, context, componentOptions, asyncFactory) {
+    this.tag = tag
+    this.data = data
+    this.children = children
+    this.text = text
+    this.elm = elm
+    this.ns = undefined
+    this.context = context
+    this.key = data && data.key
+    this.componentInstance = undefined
+    // ...
+  }
+
+  get child () {
+    return this.componentInstance
+  }
+}
+```
+
+这里可以看到`VNode`中定义了一些关键属性——标签名、数据、子节点、键值等，其它属性都是用来扩展`VNode`的灵活性以及实现一些特殊的feature 。
+
+`vnode`的生成看起来很简单——只要通过调用`new VNode()`并提供一系列初始化数据，接下来是我们在之前提到过的用于生成`vnode`的`_render`方法。
+
+### 生成vnode的_render方法
+`_render`是实例的私有方法，它在执行`renderMixin(Vue)`时被挂载到`Vue`原型上：
+```js
+// src/core/instance/render.js
+Vue.prototype._render = function () {
+  const vm = this
+  const { render, _parentVnode } = vm.$options
+
+  if (_parentVnode) {
+    vm.$scopedSlots = normalizeScopedSlots(
+      _parentVnode.data.scopedSlots,
+      vm.$slots,
+      vm.$scopedSlots
+    )
+  }
+
+  // 用$vnode保存父虚拟node
+  vm.$vnode = _parentVnode
+  let vnode = render.call(vm._renderProxy, vm.$createElement)
+
+  // set parent
+  vnode.parent = _parentVnode
+  return vnode
+}
+```
+
+这里：
+```js
+let vnode = render.call(vm._renderProxy, vm.$createElement)
+```
+
+涉及到两个重要的方法——`render`和`$createElement`。
+
+`render`来源于`options`：它可能是开发者手写的`render`，也可能是由`template`编译成的`render`。由模板生成`render`的过程，在后面的分析中会单独做介绍，在这里暂讨论手写`render`的情况。
+
+Vue.js的官方文档中介绍了手写`render`函数提供的第一个参数是`createElement`：
+```js
+render: function(createElement) {
+  return createElement('div', {
+    attrs: {
+      id: 'app',
+    },
+  }, this.message)
+}
+```
+
+将它与`_render`方法内的：
+```js
+const { render } = vm.$options
+vnode = render.call(vm._renderProxy, vm.$createElement)
+```
+
+做一下比较，即可发现手写`render`方法中提供的`createElement`参数对应的正是`vm.$createElement`方法。
+
+而`$createElement`是在`_init(vm)`阶段通过`initRender(vm)`定义在实例上的：
+```js
+// src/core/instance/render.js
+import { createElement } from '../vdom/create-element'
+
+function initRender (vm) {
+  vm._c = (a, b, c, d) => createElement(vm, a, b, c, d, false)
+  vm.$createElement = (a, b, c, d) => createElement(vm, a, b, c, d, true)
+}
+```
+
+可以看到除了`$createElement`方法，实例上还定义了`vm._c`方法——这个是在`render`方法来自模板编译生成情况下使用的，而`$createElement`是在`render`方法来自手写情况下使用的，它们都是通过调用`createElement`实现的，区别在于最后一个参数分别为`true`和`false`。
+
+```js
+// src/core/vdom/create-element
+function createElement (context, tag, data, children, normalizationType, alwaysNormalize) {
+  // alwaysNormalize：render来自手写时为true，否则为false
   if (Array.isArray(data) || isPrimitive(data)) {
-    // data长什么样子——data为对象。
     // 因为data必须为对象类型变量，如果传入的data为Array类型或基本类型，则认为无data，此时传递的data作为children处理
     normalizationType = children
     children = data
     data = undefined
   }
-  if (isTrue(alwaysNormalize)) {
-    normalizationType = ALWAYS_NORMALIZE
-  }
+  if (isTrue(alwaysNormalize)) normalizationType = ALWAYS_NORMALIZE
   return _createElement(context, tag, data, children, normalizationType)
 }
 ```
 
-`createElement`方法对`_createElement`做了一层封装，对传入`_createElement`函数的参数进行了处理。如果`data`是数组或者是原始类型，则调整参数位置。
+`createElement`做了一层封装，对参数进行了处理交给`_createElement`执行：如果`data`是数组或者是原始类型，则将其作为`children`处理。
 
 ```js
-/**
- * normalizationType表示子节点规范的类型，其值取决于`render`方法是由编译还是开发者手写
- */
-export function _createElement (
-  context: Component,
-  tag?: string | Class<Component> | Function | Object,
-  data?: VNodeData,
-  children?: any,
-  normalizationType?: number
-): VNode | Array<VNode> {
-  // 不允许data是响应式的
-  if (isDef(data) && isDef((data: any).__ob__)) {
-    process.env.NODE_ENV !== 'production' && warn(
-      `Avoid using observed data object as vnode data: ${JSON.stringify(data)}\n` +
-      'Always create fresh vnode data objects in each render!',
-      context
-    )
-    return createEmptyVNode()
-  }
+// src/core/vdom/create-element
+function _createElement (context, tag, data, children, normalizationType) {
   // 动态component(is="something")
-  if (isDef(data) && isDef(data.is)) {
-    tag = data.is
-  }
+  if (isDef(data) && isDef(data.is)) tag = data.is
   if (!tag) {
     // 动态component被设置了不存在的组件名
     return createEmptyVNode()
   }
-  // key不能是非基本类型值
-  if (process.env.NODE_ENV !== 'production' &&
-    isDef(data) && isDef(data.key) && !isPrimitive(data.key)
-  ) {
-    if (!__WEEX__ || !('@binding' in data.key)) {
-      warn(
-        'Avoid using non-primitive value as key, ' +
-        'use string/number value instead.',
-        context
-      )
-    }
-  }
 
   // 哪种情况下 children会为function？
-  if (Array.isArray(children) &&
-    typeof children[0] === 'function'
-  ) {
+  if (Array.isArray(children) && typeof children[0] === 'function') {
     data = data || {}
     data.scopedSlots = { default: children[0] }
     children.length = 0
   }
 
   // 规范化children
-  if (normalizationType === ALWAYS_NORMALIZE) {
-    children = normalizeChildren(children)
-  } else if (normalizationType === SIMPLE_NORMALIZE) {
-    children = simpleNormalizeChildren(children)
-  }
-  
+  if (normalizationType === ALWAYS_NORMALIZE) children = normalizeChildren(children)
+  else if (normalizationType === SIMPLE_NORMALIZE) children = simpleNormalizeChildren(children)
+
   // 创建VNode
   let vnode, ns
   if (typeof tag === 'string') {
@@ -95,10 +150,7 @@ export function _createElement (
     } else if ((!data || !data.pre) && isDef(Ctor = resolveAsset(context.$options, 'components', tag))) {
       vnode = createComponent(Ctor, data, context, children, tag)
     } else {
-      vnode = new VNode(
-        tag, data, children,
-        undefined, undefined, context
-      )
+      vnode = new VNode(tag, data, children, undefined, undefined, context)
     }
   } else {
     vnode = createComponent(tag, data, context, children)
@@ -133,18 +185,13 @@ if (normalizationType === ALWAYS_NORMALIZE) {
 ```
 
 可以看到，对`children`的规范会处理是根据`normalizationType`的不同而调用了`normalizeChildren`和`simpleNormalizeChildren`两个方法，这两个方法的用处都是将`children`做扁平化处理并返回一个`VNode`的一维数组，它们都定义在`src/core/vdom/helpers/normalize-children`中：
-
 ```js
-/**
- * src/core/vdom/helpers/normalize-children
- */
-
-
+// src/core/vdom/helpers/normalize-children
 // normalizeChildren的调用场景有两种：
 // 一是render方法是由开发手写，当children只有一个节点的时候，Vue.js从接口层面允许用户将children写成基础类型用来创建单个简单文本节点，这种情况下会调用createTextVNode创建一个文本节点的VNode
 // 另一种是编译slot、v-for产生嵌套数组的情况，调用normalizeArrayChildren方法
 
-export function normalizeChildren (children: any): ? Array<VNode> {
+function normalizeChildren (children) {
   return isPrimitive(children)
     ? [createTextVNode(children)]
     : Array.isArray(children)
@@ -152,10 +199,9 @@ export function normalizeChildren (children: any): ? Array<VNode> {
       : undefined
 }
 
-
 // simpleNormalizeChildren的调用场景是render方法是由编译产生，理论上生成的children都是VNode类型，只需要针对children为函数式组件返回的是一个数组做处理
 // Vue.js中函数式组件在哪些场景下使用？
-export function simpleNormalizeChildren (children: any) {
+function simpleNormalizeChildren (children) {
   for (let i = 0; i < children.length; i++) {
     if (Array.isArray(children[i])) {
       return Array.prototype.concat.apply([], children)
@@ -164,10 +210,11 @@ export function simpleNormalizeChildren (children: any) {
   return children
 }
 ```
+
 `normalizeChildren`方法定义如下：
 
 ```js
-function normalizeArrayChildren (children: any, nestedIndex?: string): Array<VNode> {
+function normalizeArrayChildren (children, nestedIndex) {
   const res = []
   let i, c, lastIndex, last
   for (i = 0; i < children.length; i++) {
@@ -222,8 +269,7 @@ function normalizeArrayChildren (children: any, nestedIndex?: string): Array<VNo
 经过以上规范化，`children`变成了类型为`VNode`的一维数组。
 
 ### VNode的创建
-回到`_createElement`方法主流程中，在对`children`做规范化处理之后，接下来的工作是创建`VNode`实例。
-
+回到`_createElement`方法主流程中，在对`children`做规范化处理之后，接下来的工作是创建`vnode`实例：
 ```js
 let vnode, ns
 if (typeof tag === 'string') {
@@ -244,10 +290,7 @@ if (typeof tag === 'string') {
     // 如果是，则通过createComponent创建组件类型的VNode
     vnode = createComponent(Ctor, data, context, children, tag)
   } else {
-    vnode = new VNode(
-      tag, data, children,
-      undefined, undefined, context
-    )
+    vnode = new VNode(tag, data, children, undefined, undefined, context)
   }
 } else {
   // 非字符串
@@ -257,11 +300,11 @@ if (typeof tag === 'string') {
 
 其中，通过`createComponent`创建组件类型`VNode`的过程将在后面组件源码中分析。
 
-### 总结
-至此，本节大致分析了
+<!-- ### 总结
+本节分析了`vm._render`方法，在这里我们要记住一个主线，`_render`方法是用于生成`vnode`的，这个方法是在`renderMixin(Vue)`时挂载到Vue原型上的，它通过
 ```js
-vm._c = (a, b, c, d) => createElement(vm, a, b, c, d, false)
-
-vm.$createElement = (a, b, c, d) => createElement(vm, a, b, c, d, true)
+const render = vm.$optoins.render
+vnode = render.call(vm._renderProxy, vm.$createElement)
 ```
-这两个挂在实例上的方法的内部流程，其作用是用于创建`VNode`，紧接着的工作是将`VNode`渲染成真实的DOM，这个由`vm._update`完成的，将在后面继续分析。
+
+生成虚拟vnode，其中`render`来自开发者手动提供或通过`template`编译生成，而`$createElement`是在`_init(vm)`阶段`initRender(vm)`时定义在实例上的，它又调用了`createElement`方法，这个方法将在下一节分析。 -->
