--- a/Vue源码/2.3-数据驱动-update方法.md
+++ b/Vue源码/2.3-数据驱动-update方法.md
@@ -1,42 +1,29 @@
 上节已经提到，`_update`方法用于将`VNode`渲染成真实的`DOM`，该方法有两个调用时机——一个首次渲染，一个是数据更新。本节仅分析首次渲染时`update`方法的执行，数据更新时的逻辑在后续的响应原理中分析。
 
 ```js
-/*
-* src/core/instance/lifecycle.js
-*/
-
+// src/core/instance/lifecycle.js
 Vue.prototype._update = function (vnode: VNode, hydrating?: boolean) {
   const vm: Component = this
   const prevEl = vm.$el
   const prevVnode = vm._vnode
   const restoreActiveInstance = setActiveInstance(vm)
   vm._vnode = vnode
-  // Vue.prototype.__patch__ is injected in entry points
-  // based on the rendering backend used.
   if (!prevVnode) {
     // 首次渲染
-    // 这里的vm.$el是之前在mountComponent方法内就挂载的，保存的是对一个真实DOM元素的引用。
-    vm.$el = vm.__patch__(vm.$el, vnode, hydrating, false /* removeOnly */)
+    // 这里的vm.$el是之前在mountComponent方法内就挂载的，保存的是对一个真实DOM元素的引用
+    vm.$el = vm.__patch__(vm.$el, vnode, hydrating, false)
   } else {
     // 非首次渲染
     vm.$el = vm.__patch__(prevVnode, vnode)
   }
   restoreActiveInstance()
   // update __vue__ reference
-  if (prevEl) {
-    prevEl.__vue__ = null
-  }
-  if (vm.$el) {
-    vm.$el.__vue__ = vm
-  }
-  // if parent is an HOC, update its $el as well
-  if (vm.$vnode && vm.$parent && vm.$vnode === vm.$parent._vnode) {
-    vm.$parent.$el = vm.$el
-  }
-  // updated hook is called by the scheduler to ensure that children are
-  // updated in a parent's updated hook.
-}
+  if (prevEl) prevEl.__vue__ = null
+  if (vm.$el) vm.$el.__vue__ = vm
 
+  // if parent is an HOC, update its $el as well
+  if (vm.$vnode && vm.$parent && vm.$vnode === vm.$parent._vnode) vm.$parent.$el = vm.$el
+}
 ```
 
 可以看到，
@@ -52,7 +39,6 @@ Vue.prototype.__patch__ = inBrowser ? patch : noop
 ```
 
 由于在服务端渲染中，没有真实的浏览器`DOM`环境，**不需要把`VNode`最终转换成`DOM`**，因此在服务端渲染中`vm.__patch__`是一个空函数。浏览器渲染中，`Vue.prototype.__patch__`指向了`src/platforms/web/runtime/patch.js`中的`patch`方法：
-
 ```js
 import * as nodeOps from 'web/runtime/node-ops'
 import { createPatchFunction } from 'core/vdom/patch'
@@ -63,8 +49,9 @@ import platformModules from 'web/runtime/modules/index'
 // built-in modules have been applied.
 const modules = platformModules.concat(baseModules)
 
-export const patch: Function = createPatchFunction({ nodeOps, modules })
+const patch = createPatchFunction({ nodeOps, modules })
 ```
+
 可以看到，`patch`方法是`createPatchFunction`方法的返回值，这里传入了两个参数：
 - `nodeOps`：封装了一系列`DOM`操作的方法，如创建、插入、移除等
 - `modules`：创建真实DOM也需要生成它的class/attrs/style等属性，modules是一个数组集合，数组的每一项都是这些属性对应的钩子方法，这些属性的创建、更新、销毁等都有对应钩子方法。比如它们都有create这个钩子方法，如将这些create钩子收集到一个数组内，需要在真实DOM上创建这些属性时，依次执行数组的每一项，也就是依次创建了它们。
@@ -72,12 +59,10 @@ export const patch: Function = createPatchFunction({ nodeOps, modules })
 在`createPatchFunction`方法内部，声明了很多辅助方法，最终返回了一个`patch`方法，这个方法正是`vm._update`方法内调用的`vm.__patch__`方法。
 
 ```js
-/**
- * src/core/vdom/patch.js
- */
+//  src/core/vdom/patch.js
 const hooks = ['create', 'activate', 'update', 'remove', 'destroy']
 
-export function createPatchFunction (backend) {
+function createPatchFunction (backend) {
   let i, j
   const cbs = {}
 
@@ -140,18 +125,8 @@ export function createPatchFunction (backend) {
             hydrating = true
           }
           if (isTrue(hydrating)) {
-            if (hydrate(oldVnode, vnode, insertedVnodeQueue)) {
-              invokeInsertHook(vnode, insertedVnodeQueue, true)
-              return oldVnode
-            } else if (process.env.NODE_ENV !== 'production') {
-              warn(
-                'The client-side rendered virtual DOM tree is not matching ' +
-                'server-rendered content. This is likely caused by incorrect ' +
-                'HTML markup, for example nesting block-level elements inside ' +
-                '<p>, or missing <tbody>. Bailing hydration and performing ' +
-                'full client-side render.'
-              )
-            }
+            invokeInsertHook(vnode, insertedVnodeQueue, true)
+            return oldVnode
           }
           // either not server-rendered, or hydration failed.
           // 创建一个空的节点
@@ -163,15 +138,7 @@ export function createPatchFunction (backend) {
         const parentElm = nodeOps.parentNode(oldElm)
 
         // 创建一个新的DOM节点
-        createElm(
-          vnode,
-          insertedVnodeQueue,
-          // extremely rare edge case: do not insert if old element is in a
-          // leaving transition. Only happens when combining transition +
-          // keep-alive + HOCs. (#4590)
-          oldElm._leaveCb ? null : parentElm,
-          nodeOps.nextSibling(oldElm)
-        )
+        createElm(vnode, insertedVnodeQueue, oldElm._leaveCb ? null : parentElm, nodeOps.nextSibling(oldElm))
 
         // update parent placeholder node element, recursively
         if (isDef(vnode.parent)) {
@@ -186,12 +153,8 @@ export function createPatchFunction (backend) {
               for (let i = 0; i < cbs.create.length; ++i) {
                 cbs.create[i](emptyNode, ancestor)
               }
-              // #6513
-              // invoke insert hooks that may have been merged by create hooks.
-              // e.g. for directives that uses the "inserted" hook.
               const insert = ancestor.data.hook.insert
               if (insert.merged) {
-                // start at index 1 to avoid re-invoking component mounted hook
                 for (let i = 1; i < insert.fns.length; i++) {
                   insert.fns[i]()
                 }
@@ -218,8 +181,7 @@ export function createPatchFunction (backend) {
 }
 ```
 
-在这里我们以下面这个为例分析`patch`的执行逻辑：
-
+在这里我们跟着下面这个例子分析`patch`的执行逻辑：
 ```js
 var app = new Vue({
   el: '#app',
@@ -237,38 +199,27 @@ var app = new Vue({
 ```
 
 在`vm._update`中是这样调用`patch`方法的：
-
 ```js
-vm.$el = vm.__patch(vm.$el, vnode, hydrating, false /* removeOnly */)
+vm.$el = vm.__patch(vm.$el, vnode, hydrating, false)
 ```
 
 在首次渲染场景下，执行`patch`时传入的`vm.$el`是对`id`为`app`的DOM对象的引用，`vnode`对应的是调用`render`方法创建`VNode`，`hydrating`在非服务端渲染下为`false`，`removeOnly`为`false`。
 
 回到`patch`方法的执行过程，由于`oldVnode`实际上是一个`DOM container`，`isRealElement`为`true`，
-
 ```js
 oldVnode = emptyNodeAt(oldVnode)
 ```
 
 `emptyNodeAt`方法将`oldVnode`转换成`VNode`对象，之后通过
-
 ```js
-createElm(
-  vnode,
-  insertedVnodeQueue,
-  oldElm._leaveCb ? null : parentElm,
-  nodeOps.nextSibling(oldElm)
-)
+createElm(vnode, insertedVnodeQueue, oldElm._leaveCb ? null : parentElm, nodeOps.nextSibling(oldElm))
 ```
 
 将`vnode`转换成真实的`DOM`并插入到它的父节点中。
 
 关于`createElm`方法的具体实现：
-
 ```js
-/**
-* src/core/vdom/patch.js
-*/
+// src/core/vdom/patch.js
 function createElm (
   vnode,
   insertedVnodeQueue,
@@ -278,72 +229,30 @@ function createElm (
   ownerArray,
   index
 ) {
-  if (isDef(vnode.elm) && isDef(ownerArray)) {
-    vnode = ownerArray[index] = cloneVNode(vnode)
-  }
+  if (isDef(vnode.elm) && isDef(ownerArray)) vnode = ownerArray[index] = cloneVNode(vnode)
 
   vnode.isRootInsert = !nested // for transition enter check
   // createComponent方法用于创建子组件，只有vnode是子组件的时候createComponent返回true
   // 在当前场景下createComponent的返回为false，继续往下执行
-  if (createComponent(vnode, insertedVnodeQueue, parentElm, refElm)) {
-    return
-  }
-
+  if (createComponent(vnode, insertedVnodeQueue, parentElm, refElm)) return
+    
   const data = vnode.data
   const children = vnode.children
   const tag = vnode.tag
   if (isDef(tag)) {
-    // 对tag的合法性在非生产环境下做校验
-    if (process.env.NODE_ENV !== 'production') {
-      if (data && data.pre) {
-        creatingElmInVPre++
-      }
-      if (isUnknownElement(vnode, creatingElmInVPre)) {
-        warn(
-          'Unknown custom element: <' + tag + '> - did you ' +
-          'register the component correctly? For recursive components, ' +
-          'make sure to provide the "name" option.',
-          vnode.context
-        )
-      }
-    }
-
     // 根据ns属性，选择不同方式创建真实DOM
-    vnode.elm = vnode.ns
-      ? nodeOps.createElementNS(vnode.ns, tag)
-      : nodeOps.createElement(tag, vnode)
+    vnode.elm = vnode.ns ? nodeOps.createElementNS(vnode.ns, tag) : nodeOps.createElement(tag, vnode)
 
     setScope(vnode)
 
-    if (__WEEX__) {
-      const appendAsTree = isDef(data) && isTrue(data.appendAsTree)
-      if (!appendAsTree) {
-        if (isDef(data)) {
-          invokeCreateHooks(vnode, insertedVnodeQueue)
-        }
-        insert(parentElm, vnode.elm, refElm)
-      }
-      createChildren(vnode, children, insertedVnodeQueue)
-      if (appendAsTree) {
-        if (isDef(data)) {
-          invokeCreateHooks(vnode, insertedVnodeQueue)
-        }
-        insert(parentElm, vnode.elm, refElm)
-      }
-    } else {
-      // 递归创建子节点元素，如果是组件会渲染组件的DOM
-      createChildren(vnode, children, insertedVnodeQueue)
-      if (isDef(data)) {
-        // 执行create钩子，并把vnode push进insertedVnodeQueue中
-        invokeCreateHooks(vnode, insertedVnodeQueue)
-      }
-      // 将生成的DOM插入到父节点中
-      insert(parentElm, vnode.elm, refElm)
+    // 递归创建子节点元素，如果是组件会渲染组件的DOM
+    createChildren(vnode, children, insertedVnodeQueue)
+    if (isDef(data)) {
+      // 执行create钩子，并把vnode push进insertedVnodeQueue中
+      invokeCreateHooks(vnode, insertedVnodeQueue)
     }
-
-    if (process.env.NODE_ENV !== 'production' && data && data.pre) {
-      creatingElmInVPre--
-    }
+    // 将生成的DOM插入到父节点中
+    insert(parentElm, vnode.elm, refElm)
   } else if (isTrue(vnode.isComment)) {
     // 注释节点
     vnode.elm = nodeOps.createComment(vnode.text)
@@ -357,7 +266,6 @@ function createElm (
 ```
 
 `createComponent`方法用于创建子组件，这个方法在后面组件部分具体分析。`createChildren`方法用于创建子元素：
-
 ```js
 function createChildren (vnode, children, insertedVnodeQueue) {
   if (Array.isArray(children)) {
@@ -374,7 +282,6 @@ function createChildren (vnode, children, insertedVnodeQueue) {
 ```
 
 可以看到，`createChildren`主要是遍历子虚拟节点，递归调用`createElm`方法，然后调用`invokeCreateHooks`执行所有的`create`钩子,并把`vnode` push 进`insertedVnodeQueue`中：
-
 ```js
 function invokeCreateHooks (vnode, insertedVnodeQueue) {
   for (let i = 0; i < cbs.create.length; ++i) {
@@ -389,7 +296,6 @@ function invokeCreateHooks (vnode, insertedVnodeQueue) {
 ```
 
 最后通过`insert`方法把DOM插入到父节点中，由于是递归调用，子元素会优先调用`insert`，所以整个`vnode`树节点的插入顺序是先子后父：
-
 ```js
 function insert (parent, elm, ref) {
   if (isDef(parent)) {
@@ -405,16 +311,13 @@ function insert (parent, elm, ref) {
 ```
 
 关于`nodeOps`下的几个DOM操作的相关方法：
-
 ```js
-/**
-* src/platforms/web/runtime/node-ops.js
-*/
-export function insertBefore (parentNode: Node, newNode: Node, referenceNode: Node) {
+// src/platforms/web/runtime/node-ops.js
+function insertBefore (parentNode, newNode, referenceNode) {
   parentNode.insertBefore(newNode, referenceNode)
 }
 
-export function appendChild (node: Node, child: Node) {
+function appendChild (node, child) {
   node.appendChild(child)
 }
 ```
@@ -426,6 +329,6 @@ export function appendChild (node: Node, child: Node) {
 最后，根据之前递归`createElm`生成的`vnode`插入顺序队列，执行相关的`insert`钩子函数，这部分内容之后会详细介绍。
 
 ### 总结
-![Vue渲染过程](https://ustbhuangyi.github.io/vue-analysis/assets/new-vue.png)
+![Vue渲染过程](https://pic.downk.cc/item/5f51fcd3160a154a67796338.png)
 
 在这里只是分析了最简单的场景，在实际的开发中，我们是把页面拆分成很多组件的，这正是Vue的组件化思想。
