--- a/Vue源码/3.1-组件化-createComponent.md
+++ b/Vue源码/3.1-组件化-createComponent.md
@@ -1,5 +1,4 @@
 之前分析过的`createElement`方法，最终是通过调用`_createElement`方法实现的。在`_createElement`方法内部，有这样一段逻辑：
-
 ```js
 if (typeof tag === 'string') {
   let Ctor
@@ -36,53 +35,21 @@ var app = new Vue({
 显然会走到`_createElement`方法的通过`createComponent`创建`VNode`实例逻辑中去。下面我们来分析`createComponent`方法的实现：
 
 ```js
-/**
-* src/core/vdom/create-component.js
-*/
-export function createComponent (
-  Ctor: Class<Component> | Function | Object | void,
-  data: ?VNodeData,
-  context: Component,
-  children: ?Array<VNode>,
-  tag?: string
-): VNode | Array<VNode> | void {
-  if (isUndef(Ctor)) {
-    return
-  }
+// src/core/vdom/create-component.js
+function createComponent (Ctor, data, context, children, tag) {
+  if (isUndef(Ctor)) return
 
   const baseCtor = context.$options._base
 
   // plain options object: turn it into a constructor
-  if (isObject(Ctor)) {
-    Ctor = baseCtor.extend(Ctor)
-  }
-
-  // if at this stage it's not a constructor or an async component factory,
-  // reject.
-  if (typeof Ctor !== 'function') {
-    if (process.env.NODE_ENV !== 'production') {
-      warn(`Invalid Component definition: ${String(Ctor)}`, context)
-    }
-    return
-  }
+  if (isObject(Ctor)) Ctor = baseCtor.extend(Ctor)
 
   // async component
   let asyncFactory
   if (isUndef(Ctor.cid)) {
     asyncFactory = Ctor
     Ctor = resolveAsyncComponent(asyncFactory, baseCtor, context)
-    if (Ctor === undefined) {
-      // return a placeholder node for async component, which is rendered
-      // as a comment node but preserves all the raw information for the node.
-      // the information will be used for async server-rendering and hydration.
-      return createAsyncPlaceholder(
-        asyncFactory,
-        data,
-        context,
-        children,
-        tag
-      )
-    }
+    if (Ctor === undefined) return createAsyncPlaceholder(asyncFactory, data, context, children, tag)
   }
 
   data = data || {}
@@ -92,17 +59,13 @@ export function createComponent (
   resolveConstructorOptions(Ctor)
 
   // transform component v-model data into props & events
-  if (isDef(data.model)) {
-    transformModel(Ctor.options, data)
-  }
+  if (isDef(data.model)) transformModel(Ctor.options, data)
 
   // extract props
   const propsData = extractPropsFromVNodeData(data, Ctor, tag)
 
   // functional component
-  if (isTrue(Ctor.options.functional)) {
-    return createFunctionalComponent(Ctor, propsData, data, context, children)
-  }
+  if (isTrue(Ctor.options.functional)) return createFunctionalComponent(Ctor, propsData, data, context, children)
 
   // extract listeners, since these needs to be treated as
   // child component listeners instead of DOM listeners
@@ -114,13 +77,10 @@ export function createComponent (
   if (isTrue(Ctor.options.abstract)) {
     // abstract components do not keep anything
     // other than props & listeners & slot
-
     // work around flow
     const slot = data.slot
     data = {}
-    if (slot) {
-      data.slot = slot
-    }
+    if (slot) data.slot = slot
   }
 
   // install component management hooks onto the placeholder node
@@ -134,14 +94,6 @@ export function createComponent (
     { Ctor, propsData, listeners, tag, children },
     asyncFactory
   )
-
-  // Weex specific: invoke recycle-list optimized @render function for
-  // extracting cell-slot template.
-  // https://github.com/Hanks10100/weex-native-directive/tree/master/component
-  if (__WEEX__ && isRecyclableComponent(vnode)) {
-    return renderRecyclableComponentTemplate(vnode)
-  }
-
   return vnode
 }
 ```
