--- a/Vue源码/1.2-Vue的定义.md
+++ b/Vue源码/1.2-Vue的定义.md
@@ -10,25 +10,22 @@ initMixin(Vue)
 // 在Vue原型上挂载了一个_init方法——_init方法在new Vue(options)时执行
 
 stateMixin(Vue)
-// 在Vue原型上挂载了 $data、$props、$set、$delete、$watch
+// 在Vue原型上挂载了数据相关属性和方法：$data、$props，$set、$delete、$watch
 
 eventsMixin(Vue)
-// 在Vue原型上挂载了 $on、$once、$off、$emit
+// 在Vue原型上挂载了自定义事件相关方法：$on、$once、$off、$emit
 
 lifecycleMixin(Vue)
-// 在Vue原型上挂载了 _update、$forceUpdate、$destroy
+// 在Vue原型上挂载了渲染DOM方法_update、重新渲染实例方法$forceUpdate、销毁实例方法$destroy
 
 renderMixin(Vue)
-// Vue.prototype.$nextTick
-// Vue.prototype._render
-// ...
+// 在Vue原型上挂载了用于创建vnode的_render方法、异步更新方法$nextTick
 ```
 
-读到`function Vue () {}`的时候不免会想这样一个问题——Vue的定义为什么不以ES6 Class的形式去实现？很快，接下来的一系列`mixin(Vue)`操作就告诉了你答案——Vue按功能的实现把它们分散到多个模块中，以操作原型对象的方式补充进去，有利于项目的维护升级，而这是用Class无法做到的。
+读到`function Vue () {}`的时候不免会想这样一个问题——Vue的定义为什么不以ES6 Class的形式去实现？从接下来的一系列`mixin(Vue)`操作可以看出来——Vue按功能的实现把它们分散到多个模块中，以操作原型对象的方式补充进去，有利于项目的维护升级，这是用Class无法做到的。
 
 ### _init(Vue)做了什么
 其中，`initMixin(Vue)`在`Vue`原型上挂载了`_init`方法：
-
 ```js
 function initMixin (Vue) {
   Vue.prototype._init = function (options?: Object) {
