--- a/Vue源码/1.2-Vue的定义.md
+++ b/Vue源码/1.2-Vue的定义.md
@@ -20,6 +20,7 @@ lifecycleMixin(Vue)
 
 renderMixin(Vue)
 // 在Vue原型上挂载了用于创建vnode的_render方法、异步更新方法$nextTick
+// 以及_o、_n、_s、_l...等方法
 ```
 
 读到`function Vue () {}`的时候不免会想这样一个问题——Vue的定义为什么不以ES6 Class的形式去实现？从接下来的一系列`mixin(Vue)`操作可以看出来——Vue按功能的实现把它们分散到多个模块中，以操作原型对象的方式补充进去，有利于项目的维护升级，这是用Class无法做到的。
