--- a/Vue源码/2.2-数据驱动-vnode和render方法.md
+++ b/Vue源码/2.2-数据驱动-vnode和render方法.md
@@ -62,15 +62,7 @@ let vnode = render.call(vm._renderProxy, vm.$createElement)
 `render`来源于`options`：它可能是开发者手写的`render`，也可能是由`template`编译成的`render`。由模板生成`render`的case，在后面的分析中会单独做介绍，在这里暂讨论手写`render`的情况。
 
 Vue.js的官方文档中介绍了手写`render`函数提供的第一个参数是`createElement`：
-```js
-render: function(createElement) {
-  return createElement('div', {
-    attrs: {
-      id: 'app',
-    },
-  }, this.message)
-}
-```
+![render](https://pic.downk.cc/item/5f549704160a154a670e7a4e.jpg)
 
 将它与`_render`方法内的：
 ```js
@@ -221,7 +213,13 @@ function normalizeArrayChildren (children, nestedIndex) {
 }
 ```
 
-这里主要做了两件事情：对`children`为数组的进行递归处理以及合并相邻`TextVNode`。
+这里主要做了两件事情：对`children`为数组的进行递归处理以及合并相邻`TextVNode`，形如前面给出手写`render`的例子：
+![children为规范化](https://pic.downk.cc/item/5f5497ae160a154a670ea5c3.jpg)
+
+这里的`children`将会被处理为：
+![children规范化](https://pic.downk.cc/item/5f54982d160a154a670ec053.jpg)
+
+总之，经过child对`children`的规划化处理之后，`children`的每一项都为`VNode`类型。
 
 #### 2.2 vnode的创建
 回到`_createElement`方法主流程中，在对`children`做规范化处理之后，接下来的工作是创建`vnode`实例：
@@ -245,7 +243,8 @@ if (typeof tag === 'string') {
 }
 ```
 
-其中，通过`createComponent`创建组件类型`vnode`的过程将在后面组件化中分析。
+这里的`vnode`主要分为普通类型和组件类型，通过`createComponent`创建组件类型`vnode`的过程将在后面组件化中分析，前面给出的手写`render`创建的`vnode`最终如下：
+![vnode](https://pic.downk.cc/item/5f549939160a154a670ef6d7.jpg)
 
 ### 总结
 我们大致了解了`_render`方法创建`vnode`的过程，每个`vnode`都有`children`，`children`的每个元素也是一个`vnode`，这样就形成了一个`VNode Tree`，它可以简单的描述对应的`DOM Tree`。
